# opengl-kurs

./: .gitignore  README.md  build_all.ps1  run_all.ps1  run_all.sh
Breakout_V1/: CMakeLists.txt  main.cpp
Lektion01/: CMakeLists.txt  main.cpp
Lektion02/: CMakeLists.txt  main.cpp
Lektion03/: CMakeLists.txt  main.cpp
Lektion04/: CMakeLists.txt  main.cpp
Lektion05/: CMakeLists.txt  main.cpp
Lektion06/: CMakeLists.txt  main.cpp
Lektion07/: CMakeLists.txt  main.cpp
Lektion08/: CMakeLists.txt  main.cpp
Lektion09/: CMakeLists.txt  main.cpp
Lektion10/: CMakeLists.txt  main.cpp
Lektion11/: CMakeLists.txt  main.cpp
Lektion12/: CMakeLists.txt  main.cpp
Lektion13/: CMakeLists.txt  main.cpp
Lektion14/: CMakeLists.txt  main.cpp
Lektion15/: CMakeLists.txt  main.cpp
Lektion16/: CMakeLists.txt  main.cpp
Lektion17/: CMakeLists.txt  main.cpp
Lektion18/: CMakeLists.txt  main.cpp
Lektion19/: CMakeLists.txt  main.cpp
Lektion20/: CMakeLists.txt  main.cpp
Lektion21/: CMakeLists.txt  main.cpp
Lektion22/: CMakeLists.txt  main.cpp
Lektion23/: CMakeLists.txt  main.cpp
Lektion24/: CMakeLists.txt  main.cpp
Lektion25/: CMakeLists.txt  main.cpp
Lektion26/: CMakeLists.txt  main.cpp
Lektion27/: CMakeLists.txt  main.cpp
Lektion28/: CMakeLists.txt  main.cpp
Lektion29/: CMakeLists.txt  main.cpp
Lektion30/: CMakeLists.txt  main.cpp
Lektion31/: CMakeLists.txt  main.cpp
Lektion32/: CMakeLists.txt  main.cpp
Lektion33/: CMakeLists.txt  main.cpp
Lektion34/: CMakeLists.txt  main.cpp
Lektion35/: CMakeLists.txt  main.cpp
Lektion36/: CMakeLists.txt  main.cpp
Lektion37/: CMakeLists.txt  main.cpp
Lektion38/: CMakeLists.txt  main.cpp
Lektion39/: CMakeLists.txt  main.cpp
Lektion40/: CMakeLists.txt  main.cpp
Lektion41/: CMakeLists.txt  main.cpp
Lektion42/: CMakeLists.txt  main.cpp
Lektion43/: CMakeLists.txt  main.cpp
Lektion44/: CMakeLists.txt  main.cpp
Lektion45/: CMakeLists.txt  main.cpp
Lektion46/: CMakeLists.txt  main.cpp
Lektion47/: CMakeLists.txt  main.cpp
Lektion48/: CMakeLists.txt  main.cpp
Lektion49/: CMakeLists.txt  main.cpp
Projekt51_FensterManager/: CMakeLists.txt  Camera.h  EmptyPanel.cpp  Gizmo.h  MenuPanel.cpp  Panel.h  Rect.h  SceneObject.cpp  SceneObject.h  SplitterNode.cpp  SplitterNode.h  ViewportPanel.cpp  ViewportPanel.h  WindowManager.cpp  WindowManager.h  main.cpp
Projekt52_FensterManager/: BitmapFont.cpp  BitmapFont.h  CMakeLists.txt  Camera.cpp  ConsolePanel.cpp  ConsolePanel.h  EmptyPanel.h  Gizmo.cpp  MenuPanel.h  MeshData.cpp  MeshData.h  MeshDatabase.cpp  MeshDatabase.h  Panel.cpp  Panel.h  SceneObject.cpp  SceneObject.h  SplitterNode.cpp  SplitterNode.h  ViewportPanel.cpp  ViewportPanel.h  WindowManager.cpp  WindowManager.h  demo_all_features.cpp  example.txt  main.cpp  test_bridge.cpp  test_facesel.cpp  test_inset.cpp  test_loopcut.cpp  test_loopcut.txt  test_mirrorweld.cpp  test_save.txt
Projekt52_PengerViewer/: CMakeLists.txt  main.cpp  wuerfel.penger
(+16 files in other folders)
