cmake_minimum_required(VERSION 3.20)
project(Lektion06 VERSION 1.0)
set(CMAKE_CXX_STANDARD 20)
find_package(OpenGL REQUIRED)
find_package(glfw3 REQUIRED)
add_executable(Lektion06 main.cpp)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/wall.jpg DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
target_include_directories(Lektion06 PRIVATE .)
target_link_libraries(Lektion06 PRIVATE OpenGL::GL glfw)