cmake_minimum_required(VERSION 3.10)
project(Projekt52_PengerViewer VERSION 1.0)
set(CMAKE_CXX_STANDARD 17)
find_package(OpenGL REQUIRED)
find_package(glfw3 REQUIRED)
find_package(GLEW REQUIRED)
add_executable(PengerViewer main.cpp)
target_link_libraries(PengerViewer PRIVATE OpenGL::GL glfw GLEW::GLEW)
